--- a/index.html
+++ b/index.html
@@ -253,47 +253,47 @@
         <div class="text-2 flex justify-center mt-4">
             <p class="text-[17px]">Because you’d probably be a little confused if we suggested you complicate your everyday business tasks instead.</p>
         </div>
-        <div class="all max-w-[1280px] mx-auto flex items-center justify-center">
-        <div class="left  "> 
+        <div class="all max-w-[1280px] mx-auto flex items-center justify-center ">
+        <div class="left cursor-pointer me-5"> 
             <div class="svg ">
                 <svg aria-hidden="true" class="h-9 w-9 bg-blue-600 rounded-md" fill="none"><defs><linearGradient id=":Raredja:" x1="11.5" y1="18" x2="36" y2="15.5" gradientUnits="userSpaceOnUse"><stop offset=".194" stop-color="#fff"></stop><stop offset="1" stop-color="#6692F1"></stop></linearGradient></defs><path d="m30 15-4 5-4-11-4 18-4-11-4 7-4-5" stroke="url(#:Raredja:)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
             </div>
             <div class="text">
                 <h3 class="text-blue-600">Reporting</h3>
             </div>
-            <div class="text-1 gap-4">
-                <span class=" mt-2 font-display text-xl text-slate-900">Stay on top of things with always up-to-date reporting features.</span>
+            <div class="text-1 ">
+                <span class="  font-display text-xl text-slate-900">Stay on top of things with always up-to-date reporting features.</span>
             </div>
             <div class="text-2">
-                <span>We talked about reporting in the section above but we needed three items here, so mentioning it one more time for posterity.</span>
+                <p class="mt-4 text-sm text-slate-600">We talked about reporting in the section above but we needed three items here, so mentioning it one more time for posterity.</p>
             </div>
         </div>
-        <div class="medium ">
-            <div class="svg">
+        <div class="medium  opacity-75 hover:opacity-100 cursor-pointer me-5 gap-10">
+            <div class="svg ">
                 <svg aria-hidden="true" class="h-9 w-9 bg-[#8B97A8]" fill="none"><path opacity=".5" d="M8 17a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff"></path><path opacity=".3" d="M8 24a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff"></path><path d="M8 10a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff"></path></svg>
             </div>
             <div class="text">
-                <span>Invertory</span>
+                <h3 class="  text-sm font-medium text-slate-600">Invertory</h3>
             </div>
-            <div class="text-1">
-                <span>Never lose track of what’s in stock with accurate inventory tracking.</span>
+            <div class="text-1 gap-5">
+                <p class="mt-2 font-display text-xl text-slate-900">Never lose track of what’s in stock with accurate inventory tracking.</p>
             </div>
             <div class="text-2">
-                <span>We don’t offer this as part of our software but that statement is inarguably true. Accurate inventory tracking would help you for sure.</span>
+                <p class="mt-4  text-sm text-slate-600">We don’t offer this as part of our software but that statement is inarguably true. Accurate inventory tracking would help you for sure.</p>
             </div>
         </div>
-        <div class="right ">
-            <div class="svg ">
+        <div class="right opacity-75 hover:opacity-100 cursor-pointer">
+            <div class="svg  mt-5">
                 <svg aria-hidden="true" class="h-9 w-9 bg-[#8B97A8]" fill="none"><path opacity=".5" d="M25.778 25.778c.39.39 1.027.393 1.384-.028A11.952 11.952 0 0 0 30 18c0-6.627-5.373-12-12-12S6 11.373 6 18c0 2.954 1.067 5.659 2.838 7.75.357.421.993.419 1.384.028.39-.39.386-1.02.036-1.448A9.959 9.959 0 0 1 8 18c0-5.523 4.477-10 10-10s10 4.477 10 10a9.959 9.959 0 0 1-2.258 6.33c-.35.427-.354 1.058.036 1.448Z" fill="#fff"></path><path d="M12 28.395V28a6 6 0 0 1 12 0v.395A11.945 11.945 0 0 1 18 30c-2.186 0-4.235-.584-6-1.605ZM21 16.5c0-1.933-.5-3.5-3-3.5s-3 1.567-3 3.5 1.343 3.5 3 3.5 3-1.567 3-3.5Z" fill="#fff"></path></svg>
             </div>
-            <div class="text-1">
-                <span>Contact</span>
+            <div class="text-1 gap-5">
+                <h3 class="mt-6 text-sm font-medium text-slate-600">Contact</h3>
             </div>
-            <div class="text-2  font-display text-xl text-slate-900">
-                <span>We don’t offer this as part of our software but that statement is inarguably true. Accurate inventory tracking would help you for sure.</span>
+            <div class="text-2  ">
+                <p class="mt-2 font-display text-xl text-slate-900">Organize all of your contacts, service providers, and invoices in one place.</p>
             </div>
             <div class="text-3">
-                <span>This also isn’t actually a feature, it’s just some friendly advice. We definitely recommend that you do this, you’ll feel really organized and professional.</span>
+                <p class="mt-4 text-sm text-slate-600">This also isn’t actually a feature, it’s just some friendly advice. We definitely recommend that you do this, you’ll feel really organized and professional.</p>
             </div>
         </div>
     </div>
