--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="overflow-x-hidden">
 
     <header>
         <div class="sm:w1/2 max-w-7xl mx-auto flex items-center">
@@ -198,9 +198,7 @@
         <div class="text-2 mt-6">
             <span class="text-[18px] flex justify-center mx-auto   text-white ">Well everything you need if you aren’t
                 that picky about minor details like tax compliance.</span>
-
         </div>
-
     </div>
     <div class="section5 bg-blue-500 m  ">
         <div class="flex  ">
@@ -210,7 +208,8 @@
                         <span class="text-white font-display text-lg">Payrol</span>
                     </div>
                     <div class="text-2   ">
-                        <span class="text-white flex justify-end">Keep track of everyone's salaries and whether or not they've been paid.
+                        <span class="text-white flex justify-end">Keep track of everyone's salaries and whether or not
+                            they've been paid.
                             Direct deposit not supported.</span>
                     </div>
                 </div>
@@ -219,7 +218,8 @@
                         <span class="text-white font-display text-lg ">Claim expenses</span>
                     </div>
                     <div class="text-2  hover:bg-[#4F8FF7] ">
-                        <span class="text-white flex justify-end">All of your receipts organized into one place, as long as you don't mind typing in the data by hand.</span>
+                        <span class="text-white flex justify-end">All of your receipts organized into one place, as long
+                            as you don't mind typing in the data by hand.</span>
                     </div>
                 </div>
                 <div class="text p-4 rounded w-[75%] hover:bg-[#4F8FF7] cursor-pointer">
@@ -227,7 +227,8 @@
                         <span class="text-white font-display text-lg">VAT handling</span>
                     </div>
                     <div class="text-2 hover:bg-[#4F8FF7]   ">
-                        <span class="text-white flex justify-end">We only sell our software to companies who don't deal with VAT at all, so technically we do all the VAT stuff they need.</span>
+                        <span class="text-white flex justify-end">We only sell our software to companies who don't deal
+                            with VAT at all, so technically we do all the VAT stuff they need.</span>
                     </div>
                 </div>
                 <div class="text p-4 rounded w-[75%] hover:bg-[#4F8FF7] cursor-pointer">
@@ -235,7 +236,8 @@
                         <span class="text-white font-display text-lg">Reporting</span>
                     </div>
                     <div class="text-2   ">
-                        <span class="text-white flex justify-end">Easily export your data into an Excel spreadsheet where you can do whatever the hell you want with it .</span>
+                        <span class="text-white flex justify-end">Easily export your data into an Excel spreadsheet
+                            where you can do whatever the hell you want with it .</span>
                     </div>
                 </div>
             </div>
@@ -251,52 +253,118 @@
             <span class="font-semibold text-[30px]">Simplify everyday business tasks.</span>
         </div>
         <div class="text-2 flex justify-center mt-4">
-            <p class="text-[17px]">Because you’d probably be a little confused if we suggested you complicate your everyday business tasks instead.</p>
+            <p class="mt-4 text-lg tracking-tight text-slate-700">Because you’d probably be a little confused if we
+                suggested you complicate your everyday business tasks instead.</p>
         </div>
         <div class="all max-w-[1280px] mx-auto flex items-center justify-center ">
-        <div class="left cursor-pointer me-5"> 
-            <div class="svg ">
-                <svg aria-hidden="true" class="h-9 w-9 bg-blue-600 rounded-md" fill="none"><defs><linearGradient id=":Raredja:" x1="11.5" y1="18" x2="36" y2="15.5" gradientUnits="userSpaceOnUse"><stop offset=".194" stop-color="#fff"></stop><stop offset="1" stop-color="#6692F1"></stop></linearGradient></defs><path d="m30 15-4 5-4-11-4 18-4-11-4 7-4-5" stroke="url(#:Raredja:)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+            <div class="left cursor-pointer me-5">
+                <div class="svg mt-2 ">
+                    <svg aria-hidden="true" class="h-9 w-9 bg-blue-600 rounded-md" fill="none">
+                        <defs>
+                            <linearGradient id=":Raredja:" x1="11.5" y1="18" x2="36" y2="15.5"
+                                gradientUnits="userSpaceOnUse">
+                                <stop offset=".194" stop-color="#fff"></stop>
+                                <stop offset="1" stop-color="#6692F1"></stop>
+                            </linearGradient>
+                        </defs>
+                        <path d="m30 15-4 5-4-11-4 18-4-11-4 7-4-5" stroke="url(#:Raredja:)" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                </div>
+                <div class="text gap-5">
+                    <h3 class="text-blue-600">Reporting</h3>
+                </div>
+                <div class="text-1 ">
+                    <span class=" mt-4  font-display text-xl text-slate-900">Stay on top of things with always
+                        up-to-date reporting features.</span>
+                </div>
+                <div class="text-2">
+                    <p class="mt-4 text-sm text-slate-600">We talked about reporting in the section above but we needed
+                        three items here, so mentioning it one more time for posterity.</p>
+                </div>
             </div>
-            <div class="text">
-                <h3 class="text-blue-600">Reporting</h3>
+            <div class="medium  opacity-75 hover:opacity-100 cursor-pointer me-5 ">
+                <div class="svg ">
+                    <svg aria-hidden="true" class="h-9 w-9 bg-[#8B97A8]" fill="none">
+                        <path opacity=".5" d="M8 17a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                            fill="#fff"></path>
+                        <path opacity=".3" d="M8 24a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z"
+                            fill="#fff"></path>
+                        <path d="M8 10a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff">
+                        </path>
+                    </svg>
+                </div>
+                <div class="text  ">
+                    <h3 class=" text-sm font-medium text-slate-600">Invertory</h3>
+                </div>
+                <div class="text-1 ">
+                    <p class="mt-2 font-display text-xl text-slate-900">Never lose track of what’s in stock with
+                        accurate inventory tracking.</p>
+                </div>
+                <div class="text-2">
+                    <p class="mt-4  text-sm text-slate-600">We don’t offer this as part of our software but that
+                        statement is inarguably true. Accurate inventory tracking would help you for sure.</p>
+                </div>
             </div>
-            <div class="text-1 ">
-                <span class="  font-display text-xl text-slate-900">Stay on top of things with always up-to-date reporting features.</span>
+            <div class="right opacity-75 hover:opacity-100 cursor-pointer">
+                <div class="svg  mt-5">
+                    <svg aria-hidden="true" class="h-9 w-9 bg-[#8B97A8]" fill="none">
+                        <path opacity=".5"
+                            d="M25.778 25.778c.39.39 1.027.393 1.384-.028A11.952 11.952 0 0 0 30 18c0-6.627-5.373-12-12-12S6 11.373 6 18c0 2.954 1.067 5.659 2.838 7.75.357.421.993.419 1.384.028.39-.39.386-1.02.036-1.448A9.959 9.959 0 0 1 8 18c0-5.523 4.477-10 10-10s10 4.477 10 10a9.959 9.959 0 0 1-2.258 6.33c-.35.427-.354 1.058.036 1.448Z"
+                            fill="#fff"></path>
+                        <path
+                            d="M12 28.395V28a6 6 0 0 1 12 0v.395A11.945 11.945 0 0 1 18 30c-2.186 0-4.235-.584-6-1.605ZM21 16.5c0-1.933-.5-3.5-3-3.5s-3 1.567-3 3.5 1.343 3.5 3 3.5 3-1.567 3-3.5Z"
+                            fill="#fff"></path>
+                    </svg>
+                </div>
+                <div class="text-1 gap-5">
+                    <h3 class="mt-6 text-sm font-medium text-slate-600">Contact</h3>
+                </div>
+                <div class="text-2  ">
+                    <p class="mt-2 font-display text-xl text-slate-900">Organize all of your contacts, service
+                        providers, and invoices in one place.</p>
+                </div>
+                <div class="text-3">
+                    <p class="mt-4 text-sm text-slate-600">This also isn’t actually a feature, it’s just some friendly
+                        advice. We definitely recommend that you do this, you’ll feel really organized and professional.
+                    </p>
+                </div>
             </div>
-            <div class="text-2">
-                <p class="mt-4 text-sm text-slate-600">We talked about reporting in the section above but we needed three items here, so mentioning it one more time for posterity.</p>
-            </div>
+
         </div>
-        <div class="medium  opacity-75 hover:opacity-100 cursor-pointer me-5 gap-10">
-            <div class="svg ">
-                <svg aria-hidden="true" class="h-9 w-9 bg-[#8B97A8]" fill="none"><path opacity=".5" d="M8 17a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff"></path><path opacity=".3" d="M8 24a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff"></path><path d="M8 10a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1v-2Z" fill="#fff"></path></svg>
+        <div
+            class="down mt-14 w-[80%] h-[600px] left-32 mb-16 relative p-16 rounded-3xl flex  bg-[#E2E8F0] overflow-x-hidden">
+            <div class="img absolute left-14 ">
+                <img class="w-[750px] h-[480px] rounded-3xl" src="./img/profit-loss.webp" alt="">
             </div>
-            <div class="text">
-                <h3 class="  text-sm font-medium text-slate-600">Invertory</h3>
-            </div>
-            <div class="text-1 gap-5">
-                <p class="mt-2 font-display text-xl text-slate-900">Never lose track of what’s in stock with accurate inventory tracking.</p>
-            </div>
-            <div class="text-2">
-                <p class="mt-4  text-sm text-slate-600">We don’t offer this as part of our software but that statement is inarguably true. Accurate inventory tracking would help you for sure.</p>
-            </div>
-        </div>
-        <div class="right opacity-75 hover:opacity-100 cursor-pointer">
-            <div class="svg  mt-5">
-                <svg aria-hidden="true" class="h-9 w-9 bg-[#8B97A8]" fill="none"><path opacity=".5" d="M25.778 25.778c.39.39 1.027.393 1.384-.028A11.952 11.952 0 0 0 30 18c0-6.627-5.373-12-12-12S6 11.373 6 18c0 2.954 1.067 5.659 2.838 7.75.357.421.993.419 1.384.028.39-.39.386-1.02.036-1.448A9.959 9.959 0 0 1 8 18c0-5.523 4.477-10 10-10s10 4.477 10 10a9.959 9.959 0 0 1-2.258 6.33c-.35.427-.354 1.058.036 1.448Z" fill="#fff"></path><path d="M12 28.395V28a6 6 0 0 1 12 0v.395A11.945 11.945 0 0 1 18 30c-2.186 0-4.235-.584-6-1.605ZM21 16.5c0-1.933-.5-3.5-3-3.5s-3 1.567-3 3.5 1.343 3.5 3 3.5 3-1.567 3-3.5Z" fill="#fff"></path></svg>
-            </div>
-            <div class="text-1 gap-5">
-                <h3 class="mt-6 text-sm font-medium text-slate-600">Contact</h3>
-            </div>
-            <div class="text-2  ">
-                <p class="mt-2 font-display text-xl text-slate-900">Organize all of your contacts, service providers, and invoices in one place.</p>
-            </div>
-            <div class="text-3">
-                <p class="mt-4 text-sm text-slate-600">This also isn’t actually a feature, it’s just some friendly advice. We definitely recommend that you do this, you’ll feel really organized and professional.</p>
+            <div class="img absolute right-[-600px]">
+                <img class="w-[950px] rounded-3xl" src="./img/inventory.webp" alt="">
             </div>
         </div>
     </div>
+    <div class="section7 bg-[url(./img/background-call-to-action.6a5a5672.jpg)] h-[1000px] ">
+        <div class="all text-center flex flex-col py-36 gap-8 ">
+            <div class="text-1">
+                <h2 class="text-white text-4xl font-medium">Get started today</h2>
+            </div>
+            <div class="text-2">
+                <p class="text-white text-lg">It’s time to take control of your books. Buy our software so you can feel
+                    like you’re doing something productive.</p>
+            </div>
+            <div class="text-3  flex justify-center">
+                <button class=" text-black font-semibold rounded-[20px] bg-white w-[150px] p-2 ">Get 6 months
+                    free</button>
+            </div>
+        </div>
+    </div>
+    <div class="section8 bg-[#F8FAFC]">
+        <div class="text-1 text-center mt-20 ">
+            <h2 class="text-slate-900 text-3xl">Loved by businesses worldwide.</h2>
+        </div>
+        <div class="text-2 text-center mt-5">
+            <p>Our software is so simple that people can’t help but fall in love with it. Simplicity is easy when you
+                just skip tons of mission-critical features.</p>
+        </div>
     </div>
 </body>
 
