--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
     <div class="section4  mx-auto  bg-blue-500 mt-14 ">
         <div class="text-1 flex justify-center mx-auto  ">
-            <span class="text-[50px] text-white mt-24">Everything you need to run your books.</span>
+            <span class="text-[50px] text-white mt-24 ">Everything you need to run your books.</span>
         </div>
         <div class="text-2 mt-6">
             <span class="text-[18px] flex justify-center mx-auto   text-white ">Well everything you need if you aren’t
@@ -357,14 +357,131 @@
             </div>
         </div>
     </div>
-    <div class="section8 bg-[#F8FAFC]">
-        <div class="text-1 text-center mt-20 ">
-            <h2 class="text-slate-900 text-3xl">Loved by businesses worldwide.</h2>
-        </div>
-        <div class="text-2 text-center mt-5">
+    <div class="section8 bg-[#f7f7f9]    ">
+
+        <div class="text-1 text-center flex flex-col mt-20  ">
+            <h2 class="text-slate-900 text-3xl  flex justify-center ">Loved by businesses worldwide.</h2>
             <p>Our software is so simple that people can’t help but fall in love with it. Simplicity is easy when you
                 just skip tons of mission-critical features.</p>
+
         </div>
+
+
+
+
+        <div class="flex flex-wrap">
+            <div class="left mt-[50px] ms-[80px] mb-[100px]">
+                <div class="up bg-white rounded-lg w-[400px]">
+                    <p class="text-lg tracking-tight text-slate-900">TaxPal is so easy to use I can’t help but wonder if
+                        it’s really doing the things the government expects me to do.</p>
+                    <svg aria-hidden="true" width="105" height="78" class="absolute left-6 top-6 fill-slate-100">
+                        <path
+                            d="M25.086 77.292c-4.821 0-9.115-1.205-12.882-3.616-3.767-2.561-6.78-6.102-9.04-10.622C1.054 58.534 0 53.411 0 47.686c0-5.273.904-10.396 2.712-15.368 1.959-4.972 4.746-9.567 8.362-13.786a59.042 59.042 0 0 1 12.43-11.3C28.325 3.917 33.599 1.507 39.324 0l11.074 13.786c-6.479 2.561-11.677 5.951-15.594 10.17-3.767 4.219-5.65 7.835-5.65 10.848 0 1.356.377 2.863 1.13 4.52.904 1.507 2.637 3.089 5.198 4.746 3.767 2.41 6.328 4.972 7.684 7.684 1.507 2.561 2.26 5.5 2.26 8.814 0 5.123-1.959 9.19-5.876 12.204-3.767 3.013-8.588 4.52-14.464 4.52Zm54.24 0c-4.821 0-9.115-1.205-12.882-3.616-3.767-2.561-6.78-6.102-9.04-10.622-2.11-4.52-3.164-9.643-3.164-15.368 0-5.273.904-10.396 2.712-15.368 1.959-4.972 4.746-9.567 8.362-13.786a59.042 59.042 0 0 1 12.43-11.3C82.565 3.917 87.839 1.507 93.564 0l11.074 13.786c-6.479 2.561-11.677 5.951-15.594 10.17-3.767 4.219-5.65 7.835-5.65 10.848 0 1.356.377 2.863 1.13 4.52.904 1.507 2.637 3.089 5.198 4.746 3.767 2.41 6.328 4.972 7.684 7.684 1.507 2.561 2.26 5.5 2.26 8.814 0 5.123-1.959 9.19-5.876 12.204-3.767 3.013-8.588 4.52-14.464 4.52Z">
+                        </path>
+                    </svg>
+                    <div class="line w-[350px] h-[1px] bg-slate-600 mt-[10px] "></div>
+                    <div class="all flex justify-between mt-[30px]">
+                        <div class="text ms-[20px]">
+                            <p>Sheryl Berge</p>
+                            <span>CEO at Lynch LLC</span>
+                        </div>
+                        <div class="img me-[30px]">
+                            <img src="./img/avatar-1.webp" class=" rounded-full" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="down mt-[50px] bg-white rounded-lg w-[400px]">
+                    <div class="text ">
+                        <p>I’m trying to get a hold of someone in support, I’m in a lot of trouble right now and they
+                            are saying it has something to do with my books. Please get back to me right away.</p>
+
+                    </div>
+                    <div class="line w-[350px] h-[1px] bg-slate-600 mt-[10px] "></div>
+                    <div class="all flex justify-between mt-[30px]">
+                        <div class="text ms-[20px]">
+                            <p>Amy Hahn</p>
+                            <span>Director at Velocity Industries</span>
+                        </div>
+                        <div class="img me-[30px]">
+                            <img src="./img/avatar-4.webp" class=" rounded-full" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="medium mt-[50px] ms-[50px] mb-[100px]">
+                <div class="up bg-white rounded-lg w-[400px]">
+                    <p class="text-xl tracking-tight text-slate-900">The best part about TaxPal is every time I pay my
+                        employees, my bank balance doesn’t go down like it used to. Looking forward to spending this
+                        extra cash when I figure out why my card is being declined.</p>
+                    <div class="line w-[350px] h-[1px] bg-slate-600 mt-[10px] "></div>
+                    <div class="all flex justify-between mt-[30px]">
+                        <div class="text flex flex-col gap-3 ms-[20px]">
+                            <p>Leland Kiehn</p>
+                            <span>Founder of Kiehn and Sons</span>
+                        </div>
+                        <div class="img me-[30px]">
+                            <img src="./img/avatar-5.webp" class=" rounded-full" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="down bg-white rounded-lg w-[400px] mt-[40px]">
+                    <p class="text-xl tracking-tight text-slate-900">There are so many things I had to do with my old
+                        software that I just don’t do at all with TaxPal. Suspicious but I can’t say I don’t love it.
+                    </p>
+                    <div class="line w-[350px] h-[1px] bg-slate-600 mt-[10px] "></div>
+                    <div class="all flex justify-between mt-[30px]">
+                        <div class="text flex flex-col gap-3 ms-[20px]">
+                            <p>Erin Powlowski</p>
+                            <span>COO at Armstrong Inc</span>
+                        </div>
+                        <div class="img me-[30px]">
+                            <img src="./img/avatar-2.webp" class=" rounded-full" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right mt-[50px] ms-[50px] mb-[100px]">
+                <div class="up bg-white rounded-lg w-[400px]">
+                    <p class="text-xl tracking-tight text-slate-900">I used to have to remit tax to the EU and with
+                        TaxPal I somehow don’t have to do that anymore. Nervous to travel there now though.</p>
+                    <div class="line w-[350px] h-[1px] bg-slate-600 mt-[10px] "></div>
+                    <div class="all flex justify-between mt-[30px]">
+                        <div class="text flex flex-col gap-3 ms-[20px]">
+                            <p>Peter Renolds</p>
+                            <span>Founder of West Inc</span>
+                        </div>
+                        <div class="img me-[30px]">
+                            <img src="./img/avatar-3.webp" class=" rounded-full" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="down bg-white rounded-lg w-[400px] mt-[40px]">
+                    <p class="text-xl tracking-tight text-slate-900">This is the fourth email I’ve sent to your support
+                        team. I am literally being held in jail for tax fraud. Please answer your damn emails, this is
+                        important.</p>
+                    <div class="line w-[350px] h-[1px] bg-slate-600 mt-[10px] "></div>
+                    <div class="all flex justify-between mt-[30px]">
+                        <div class="text flex flex-col gap-3 ms-[20px]">
+                            <p>Amy Hahn</p>
+                            <span>Director at Velocity Industries</span>
+                        </div>
+                        <div class="img me-[30px]">
+                            <img src="./img/avatar-4.webp" class=" rounded-full" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section9 bg-[#0F172A]">
+        <div class="text-1 text-center flex flex-col gap-5">
+            <h2 class="text-white font-display text-3xl tracking-tight  sm:text-4xl mt-[100px]">Simple pricing, for
+                everyone.</h2>
+            <span class="text-white ">It doesn’t matter what size your business is, our software won’t work well for
+                you.</span>
+        </div>
+
     </div>
 </body>
 
